--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.7.7",
     "expo": "~52.0.11",
+    "expo-location": "~18.0.2",
     "expo-status-bar": "~2.0.0",
+    "maps": "^0.3.3",
+    "native": "^0.3.3",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
+    "react": "^18.3.1",
     "react-native": "0.76.3",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
@@ -29,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.11",
     "tailwindcss": "^3.4.15"
   },
   "private": true
