--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
